<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_ros_visualization</name>
  <version>1.0.1</version>
  <description>Components of MoveIt! that offer visualization</description>

  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="dave@picknik.ai">Dave Coleman</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_default_plugins</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <!--<exec_depend>interactive_markers</exec_depend>-->
  <!--<exec_depend>moveit_ros_robot_interaction</exec_depend>-->
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <!--<exec_depend>moveit_ros_warehouse</exec_depend>-->
  <exec_depend>object_recognition_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
